<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TabHostActivity">


        <TabHost
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tabHost"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <TabWidget
                            android:id="@android:id/tabs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TabWidget>

                        <FrameLayout
                            android:id="@android:id/tabcontent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                                <LinearLayout
                                    android:id="@+id/linearLayoutCalle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="@dimen/margintop"
                                    android:layout_gravity="center_horizontal">

                                    <LinearLayout
                                        android:id="@+id/layoutBotonesCalle"
                                        android:orientation="horizontal"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content">

                                        <Button
                                            android:id="@+id/btnSigueCalle"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/btnSigueCalle" />
                                        <Button
                                            android:id="@+id/btnCruzaCalle"
                                            android:layout_marginLeft="@dimen/margintop"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/btnCruzaCalle" />
                                    </LinearLayout>
                                    <LinearLayout
                                        android:id="@+id/layoutTextCalle"
                                        android:layout_marginTop="@dimen/margintop"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content">
                                        <TextView
                                            android:id="@+id/tvCalleSigue"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/tvCalleSigue"
                                            android:freezesText="true"
                                            android:layout_marginLeft="@dimen/margintop"/>
                                        <TextView
                                            android:id="@+id/tvCalleCruza"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/tvCalleCruza"
                                            android:freezesText="true"
                                            android:layout_marginLeft="@dimen/marginNumeros"/>
                                    </LinearLayout>

                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/linearLayoutAvenida"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="@dimen/margintop"
                                    android:layout_gravity="center_horizontal">


                                    <LinearLayout
                                        android:id="@+id/layoutBotonesAve"
                                        android:orientation="horizontal"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal">
                                            <Button
                                                android:id="@+id/btnSigueAve"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/btnSigueAve" />
                                            <Button
                                                android:id="@+id/btnCruzaAve"
                                                android:layout_marginLeft="@dimen/margintop"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/btnCruzaAve" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:id="@+id/layoutTextAve"
                                        android:layout_marginTop="@dimen/margintop"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content">
                                        <TextView
                                            android:id="@+id/tvAveSigue"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/tvAvSigue"
                                            android:freezesText="true"
                                            android:layout_marginLeft="@dimen/margintop"/>
                                        <TextView
                                            android:id="@+id/tvAveCruza"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/tvAveCruza"
                                            android:freezesText="true"
                                            android:layout_marginLeft="@dimen/marginNumeros"/>
                                    </LinearLayout>
                                </LinearLayout>


                        </FrameLayout>
                </LinearLayout>
        </TabHost>
</RelativeLayout>
